Fix navbar not being hidden by default on lowres

--- a/source/static/sass/layout.sass
+++ b/source/static/sass/layout.sass
@@ -167,6 +167,8 @@
   background-color: $color-primary-0
   height: 100%
   color: $whitish
+  display: flex
+  flex-direction: column
 
   @media #{$lowres}
     display: none
@@ -245,10 +247,6 @@
 
     a
       color: $color-primary-3
-
-#nav-column
-  display: flex
-  flex-direction: column
 
 #nav-end
   margin-top: auto
